# dawn-build

./: CMakeLists.txt  README.md
macOS/debug/include/dawn/: dawn_proc_table.h  webgpu.h  webgpu_cpp.h  webgpu_cpp_print.h
macOS/debug/include/dawn/wire/client/: webgpu.h  webgpu_cpp.h
macOS/debug/lib/cmake/Dawn/: DawnTargets-debug.cmake
macOS/release/include/dawn/: webgpu.h  webgpu_cpp.h
windows/debug/include/dawn/: webgpu_cpp_print.h
windows/debug/include/dawn/wire/client/: webgpu_cpp.h
windows/debug/lib/: webgpu_dawn.lib
windows/debug/lib/cmake/Dawn/: DawnTargets-debug.cmake  DawnTargets.cmake
windows/release/include/dawn/: webgpu.h  webgpu_cpp.h  webgpu_cpp_print.h
windows/release/include/dawn/wire/client/: webgpu.h
